apps/warlord-crafting-suite/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: grudge-warlords
  labels:
    name: grudge-warlords
    environment: production
